# drumlin

./: .gitignore  Cargo.toml  LICENSE  bundler.toml
.cargo/: config.toml
crates/drumlin/: Cargo.toml
crates/drumlin/kits/: README.md
crates/drumlin/src/: dig.rs  kitfiles.rs  kits.rs  kits_baked.rs  lib.rs  main.rs  midi_export.rs  presets.rs  worlds.rs
crates/drumlin/src/gui/: index.html
crates/dsp_core/: Cargo.toml
crates/dsp_core/src/: chorus.rs  delay.rs  drive.rs  dynamics.rs  envelope.rs  filter.rs  lfo.rs  lib.rs  mod_matrix.rs  oscillator.rs  phaser.rs  reverb.rs  util.rs  wavetable.rs
crates/percussion_core/: Cargo.toml
crates/percussion_core/src/: bus.rs  clap_diffuser.rs  drift.rs  golden.rs  kit.rs  lib.rs  metal_cluster.rs  mod_engine.rs  mod_matrix.rs  pitch_env.rs  plock.rs  resonator.rs  rng.rs  sequencer.rs  tail.rs
crates/percussion_core/src/voice/: clap.rs  cowbell.rs  hat.rs  kick.rs  mod.rs  rim.rs  snare.rs  tom.rs  zap.rs
docs/: SHIPPING.md  drumlin-design.md  drumlin-plan.md
scripts/: build-au.sh  notarize.sh
xtask/: Cargo.toml
xtask/src/: bake_kits.rs  main.rs
